# carma

./: CMakeLists.txt  carma.txt  readme.md
carma/: carma.h  carma_assert.h  carma_auto.h  carma_block_expression.h  carma_error.h  carma_extern_c.h  carma_gnu.h  carma_json_parse.h  carma_json_serialize.h  carma_let.h  carma_make.h  carma_parse.h  carma_serialize.h  carma_simple_table.h  carma_std.h  carma_string.c  carma_string.h  carma_table.h  carma_type_inference.h  carma_type_of.h  image.h  make.h  matrix.h  vector.h
carma_examples/: CMakeLists.txt  aoc22_01.c  particles.c  raytracer.c  tests.c  words.c
carma_examples/advent_of_code_2025/: day01_part1.c  day01_part2.c  day02_part1.c  day03_part1.c  day04_part1.c  day05_part1.c  day06_part1.c
docs/: README.md  _sidebar.md  array_views.md  arrays.md  compatibility.md  custom.css  data_structures.md  drop_algorithms.md  dynamic_array_algorithms.md  error_handling.md  image_algorithms.md  index.html  json_parsing.md  json_serialization.md  multi_dimensional_array_algorithms.md  optional_algorithms.md  range_algorithms.md  string_builder.md  string_view.md  strings.md  table_algorithms.md
src/: aoc22_01.c  carma.h  raytracer.c  tests.c
